--- a/src/test/unit/checker/mock_unfinished_sale_article.html
+++ b/src/test/unit/checker/mock_unfinished_sale_article.html
@@ -4,11 +4,11 @@
    <body id='body'>
       <div class='l-container-detail-main-right' id='items'>
          <div class='clearfix'>
-            <div class='callout small c-callout-secondary u-border-none'>
-               <p class='u-text-center u-size-s u-font-bold'>
-                  お問い合わせの受付は
-                  <br />
-                  終了いたしました。
+            <div class='u-margin-m-b'>
+               <a class="c-button-primary c-button-hollow gtm_inquiry_button_pc gtm_inquiry_from_sale_by_not_signed_in" target="_blank" rel="nofollow" href="/kanagawa/sale-bic/article-qy61m/inquiry">投稿者にメールで問い合わせ
+               </a>
+               <p class='u-size-xs u-color-gray u-margin-xs-t'>
+                  ※問い合わせは会員登録とログイン必須です
                </p>
             </div>
          </div>
